welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:45: error: value ! is not a member of java.awt.Color
	if(c != Color.ORANGE & c! Color.BLUE){
                                ^